@@ -12,6 +12,7 @@ dillo-2.2.1 [not released yet]
  - Work with libpng-1.4.
  - Handle zero-width space.
  - Fix segfault closing window from WM.
+ - Limit total number of cookies.
    Patches: corvid
 
 -----------------------------------------------------------------------------
